--- a/src/paginas/pagina2.html
+++ b/src/paginas/pagina2.html
@@ -24,7 +24,7 @@
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                        <img src="/src/multimedia/img/img/mundial logo.png" width="80px" height="80px" alt="">
+                        <img src="../../src/multimedia/img/img/mundial logo.png"  width="80px" height="80px" alt="">
                         <div class="px-3 py-1 bg-dark text-white ">
                             <h1>Mundial Tv Digital</h1>
                         </div>
@@ -72,8 +72,8 @@
     <div class="container-fluid">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
-                <div class="card shadow-sm">
-                    <img src="/src/multimedia/img/img-paginas/canales-argentina/canales-argentina-2.png" width="100%" height="320" alt="">
+                <div class=".card shadow-sm">
+                    <img src="../../src/multimedia/img/img-paginas/canales-argentina/canales-argentina-2.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
                         <p class="card-text">Los canales de noticias mas reconocidos del pais y mucho mas</p>
@@ -85,7 +85,7 @@
             </div>
             <div class="col">
                 <div class="card shadow-sm">
-                    <img src="/src/multimedia/img/img-paginas/canales-argentina/canales-argentina.png" width="100%" height="320" alt="">
+                    <img src="../../src/multimedia/img/img-paginas/canales-argentina/canales-argentina.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
                         <p class="card-text">Todos los canales de aire que mas te gustan con la mejor calidad de imaguen</p>
@@ -96,7 +96,7 @@
             </div>
             <div class="col">
                 <div class="card shadow-sm">
-                    <img src="/src/multimedia/img/img-paginas/canales-argentina/canales-cine.png" width="100%" height="320" alt="">
+                    <img src="../../src/multimedia/img/img-paginas/canales-argentina/canales-cine.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
                         <p class="card-text">Todos los canales cine para que disfrutes del mejor contenido al mejor precio</p>
@@ -129,7 +129,7 @@
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
                 <li class="page-item enabled">
-                    <a class="page-link" href="/index.html" tabindex="-1" arial-enabled="true">Anterior</a>
+                    <a class="page-link" href="../../index.html" tabindex="-1" arial-enabled="true">Anterior</a>
                 </li>
 
                 <li class="page-item"><a class="page-link bg-primary" href="pagina2.html">2</a></li>
