--- a/src/paginas/pagina3.html
+++ b/src/paginas/pagina3.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                        <img src="/src/multimedia/img/img/mundial logo.png" width="80px" height="80px" alt="">
+                        <img src="../../src/multimedia/img/img/mundial logo.png" width="80px" height="80px" alt="">
                         <div class="px-3 py-1 bg-dark text-white ">
                             <h1>Mundial Tv Digital</h1>
                         </div>
@@ -74,7 +74,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
                 <div class="card shadow-sm">
-                    <img src="/src/multimedia/img/img-paginas/canales-internacionales-culturales/canales-internacionales.png" width="100%" height="320" alt="">
+                    <img src="../../src/multimedia/img/img-paginas/canales-internacionales-culturales/canales-internacionales.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
                         <p class="card-text">Los canales de noticias mas reconocidos del Mundo y mucho mas</p>
@@ -86,7 +86,7 @@
             </div>
             <div class="col">
                 <div class="card shadow-sm">
-                    <img src="/src/multimedia/img/img-paginas/canales-internacionales-culturales/canales-culturales.png" width="100%" height="320" alt="">
+                    <img src="../../src/multimedia/img/img-paginas/canales-internacionales-culturales/canales-culturales.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
                         <p class="card-text">Todos los canales culturales que mas te gustan con la mejor calidad de imaguen</p>
@@ -97,7 +97,7 @@
             </div>
             <div class="col">
                 <div class="card shadow-sm">
-                    <img src="/src/multimedia/img/img-paginas/canales-internacionales-culturales/canales-internacionales-2.png" width="100%" height="320" alt="">
+                    <img src="../../src/multimedia/img/img-paginas/canales-internacionales-culturales/canales-internacionales-2.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
                         <p class="card-text">Todo estos canales y muchos mas, disfruta del mejor contenido al mejor precio</p>
