--- a/src/paginas/pagina5.html
+++ b/src/paginas/pagina5.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                        <img src="/src/multimedia/img/img/mundial logo.png" width="80px" height="80px" alt="">
+                        <img src="../../src/multimedia/img/img/mundial logo.png" width="80px" height="80px" alt="">
                         <div class="px-3 py-1 bg-dark text-white ">
                             <h1>Mundial Tv Digital</h1>
                         </div>
@@ -74,7 +74,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
                 <div class="card shadow-sm">
-                    <img src="/src/multimedia/img/img-paginas/canales-infantiles-musicales/infantil-canales.png" width="100%" height="320" alt="">
+                    <img src="../../src/multimedia/img/img-paginas/canales-infantiles-musicales/infantil-canales.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
                         <p class="card-text">Disfruta de todos los canales infantiles en la mejor calidad de imaguen</p>
@@ -86,7 +86,7 @@
             </div>
             <div class="col">
                 <div class="card shadow-sm">
-                    <img src="/src/multimedia/img/img-paginas/canales-infantiles-musicales/infantil-canales-2.png" width="100%" height="320" alt="">
+                    <img src="../../src/multimedia/img/img-paginas/canales-infantiles-musicales/infantil-canales-2.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
                         <p class="card-text">Disfruta de todos los canales de musica de todos los lugares del mundo</p>
@@ -97,7 +97,7 @@
             </div>
             <div class="col">
                 <div class="card shadow-sm">
-                    <img src="/src/multimedia/img/img-paginas/canales-infantiles-musicales/canales-musicales.png" width="100%" height="320" alt="">
+                    <img src="../../src/multimedia/img/img-paginas/canales-infantiles-musicales/canales-musicales.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
                         <p class="card-text">Ademas de todos estos canales hay mucho mas contenido de canales , peliculas estreno y mas....</p>
