--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                         <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                            <img src="src/multimedia/img/img/mundial logo.png" width="80px" height="80px" alt=""><h1>Mundial Tv Digital</h1>
+                            <img src="src/multimedia/img/img/mundial logo.png" width="80px" height="80px" alt=""><h1 class id="titulo-portada">Mundial Tv Digital</h1>
                             <div class="px-3 py-1 bg-dark text-white ">
                                 
                             </div>
@@ -191,7 +191,7 @@
 
             <div class="container">
                 <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-                    <h1 class="display-4 fw-normal">Precios</h1>
+                    <h2 class="display-4 fw-normal">Precios</h2>
                     <p class="fs-5 text-muted">Cada Plan del Servicio esta disponible para ver hasta 3 dispositivos en simultaneo</p>
                 </div>
                 <main>
@@ -202,7 +202,7 @@
                                     <h4 class="my-0 fw-normal">1 Mes</h4>
                                 </div>
                                 <div class="card-body">
-                                    <h1 class="card-title pricing-card-title">$500</h1>
+                                    <h2 class="card-title pricing-card-title">$500</h2>
                                     <ul class="list-unstyled mt-3 mb-4">
                                         <li>Cuenta Email</li>
                                         <li>3 Disp en Simultaneo</li>
@@ -219,7 +219,7 @@
                                     <h4 class="my-0 fw-normal">6 Meses</h4>
                                 </div>
                                 <div class="card-body">
-                                    <h1 class="card-title pricing-card-title">$2500</h1>
+                                    <h2 class="card-title pricing-card-title">$2500</h2>
                                     <ul class="list-unstyled mt-3 mb-4">
                                         <li>Cuenta Email</li>
                                         <li>3 Disp en Simultaneo</li>
@@ -237,7 +237,7 @@
                                     <h4 class="my-0 fw-normal">Plan Anual</h4>
                                 </div>
                                 <div class="card-body">
-                                    <h1 class="card-title pricing-card-title">$4200</h1>
+                                    <h2 class="card-title pricing-card-title">$4200</h2>
                                     <ul class="list-unstyled mt-3 mb-4">
                                         <li>Cuenta Email</li>
                                         <li>3 Disp en Simultaneo</li>
@@ -294,7 +294,7 @@
                 <footer class="bg-light text-center text-lg-start">
                     <!-- Copyright -->
                     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                        © 2022 Copyright:
+                        © 2022 Copyright
                         <a class="text-dark" href="https://www.mundialtvdigital.com">MundialTvDigital</a>
                     </div>
                     <!-- Copyright -->
