--- a/src/paginas/pagina2.html
+++ b/src/paginas/pagina2.html
@@ -72,7 +72,7 @@
     <div class="container-fluid">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
-                <div class=".card shadow-sm">
+                <div class="card shadow-sm">
                     <img src="../../src/multimedia/img/img-paginas/canales-argentina/canales-argentina-2.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
@@ -88,7 +88,7 @@
                     <img src="../../src/multimedia/img/img-paginas/canales-argentina/canales-argentina.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
-                        <p class="card-text">Todos los canales de aire que mas te gustan con la mejor calidad de imaguen</p>
+                        <p class="card-text">Todos los canales de aire que mas te gustan con la mejor calidad de imagen</p>
                         <div class="d-flex justify-content-between align-items-center">
                         </div>
                     </div>
