--- a/src/paginas/pagina3.html
+++ b/src/paginas/pagina3.html
@@ -89,7 +89,7 @@
                     <img src="../../src/multimedia/img/img-paginas/canales-internacionales-culturales/canales-culturales.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
-                        <p class="card-text">Todos los canales culturales que mas te gustan con la mejor calidad de imaguen</p>
+                        <p class="card-text">Todos los canales culturales que mas te gustan con la mejor calidad de imagen</p>
                         <div class="d-flex justify-content-between align-items-center">
                         </div>
                     </div>
