--- a/src/paginas/pagina4.html
+++ b/src/paginas/pagina4.html
@@ -77,7 +77,7 @@
                     <img src="../../src/multimedia/img/img-paginas/hbo-universal-adultos/universal-canales.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
-                        <p class="card-text">Disfruta de todos los canales de Universal plus en la mejor calidad de imaguen</p>
+                        <p class="card-text">Disfruta de todos los canales de Universal plus en la mejor calidad de imagen</p>
                         <div class="d-flex justify-content-between align-items-center">
 
                         </div>
@@ -89,7 +89,7 @@
                     <img src="../../src/multimedia/img/img-paginas/hbo-universal-adultos/hbo-canales.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
-                        <p class="card-text">Disfruta de todos los canales de HBO con la mejor calidad de imaguen</p>
+                        <p class="card-text">Disfruta de todos los canales de HBO con la mejor calidad de imagen</p>
                         <div class="d-flex justify-content-between align-items-center">
                         </div>
                     </div>
