--- a/src/paginas/pagina5.html
+++ b/src/paginas/pagina5.html
@@ -77,7 +77,7 @@
                     <img src="../../src/multimedia/img/img-paginas/canales-infantiles-musicales/infantil-canales.png" width="100%" height="320" alt="">
 
                     <div class="card-body">
-                        <p class="card-text">Disfruta de todos los canales infantiles en la mejor calidad de imaguen</p>
+                        <p class="card-text">Disfruta de todos los canales infantiles en la mejor calidad de imagen</p>
                         <div class="d-flex justify-content-between align-items-center">
 
                         </div>
