--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                        <img src="src/multimedia/img/img/mundial logo.png"  width="80px" height="80px" alt="">
+                        <img src="../../src/multimedia/img/img/mundial logo.png"  width="80px" height="80px" alt="">
                         <div class="px-3 py-1 bg-dark text-white ">
                             <h1>Mundial Tv Digital</h1>
                         </div>
